--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,46 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",                             
-    "target": "ES2017",
-    "declaration": true,
-    "removeComments": true,                               
-    "experimentalDecorators": true,                   
-    "emitDecoratorMetadata": true,                    
-    "resolveJsonModule": true,                        
-    "sourceMap": true,                                
-    "outDir": "./dist",
-    "rootDir": "./src",                                   
-    "esModuleInterop": true,                            
-    "forceConsistentCasingInFileNames": true,           
-    "strict": true,                                     
-    "noImplicitAny": false,                          
-    "skipLibCheck": true,
-    "types": ["reflect-metadata","node", "jest"]                                
-  },
-  "include": [
-    "src/**/*.ts",
-    ".eslintrc.js",
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "test/**/*"
-  ]
+    "compilerOptions": {
+        "module": "commonjs",
+        "target": "ES2017",
+        "declaration": true,
+        "removeComments": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "resolveJsonModule": true,
+        "strictPropertyInitialization": false,
+        "sourceMap": true,
+        "outDir": "./dist",
+        "rootDir": "./",
+        "baseUrl": "src",
+        "paths": {
+            "@application/*": [
+                "application/*"
+            ],
+            "@domain/*": [
+                "domain/*"
+            ],
+            "@infra/*": [
+                "infra/*"
+            ]
+        },
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "noImplicitAny": false,
+        "skipLibCheck": true,
+        "types": [
+            "reflect-metadata",
+            "node",
+            "jest"
+        ]
+    },
+    "include": [
+        "src/**/*.ts",
+        ".eslintrc.js"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist",
+        "test/**/*"
+    ]
 }
