--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "expressots-real-world-app",
     "version": "1.0.0",
-    "description": "",
-    "author": "",
+    "description": "Conduit App built using ExpressoTS",
+    "author": "Rafael Thayto",
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
@@ -10,7 +10,7 @@
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "lint": "eslint \"src/**/*.ts\" --fix",
         "start": "tsnd -r tsconfig-paths/register ./src/main.ts",
-        "start:prod": "node ./dist/main.js",
+        "start:prod": "node -r ./tsconfig-paths-bootstrap.js ./dist/src/main.js",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage"
