--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "jest": "^29.4.3",
         "prettier": "^2.8.4",
+        "prisma": "4.13.0",
         "ts-jest": "^29.0.5",
         "ts-node-dev": "^2.0.0",
         "tsconfig-paths": "^4.2.0",
@@ -34,6 +35,7 @@
     },
     "dependencies": {
         "@expressots/core": "^1.2.0",
+        "@prisma/client": "4.13.0",
         "dotenv": "^16.0.3",
         "inversify": "^6.0.1",
         "inversify-binding-decorators": "^4.0.0",
