--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
+# Application
+ENVIRONMENT="Development" #Development, Staging, Production
+PORT=3000
+
+# Log System
+FILE=general #log file name
+FOLDER=logs #log folder name
+
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
