--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,49 +1,54 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "ES2017",
-        "declaration": true,
-        "removeComments": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "resolveJsonModule": true,
-        "strictPropertyInitialization": false,
-        "sourceMap": true,
-        "outDir": "./dist",
-        "rootDir": "./",
-        "baseUrl": "./",
-        "paths": {
-            "@application/*": [
-                "src/application/*"
-            ],
-            "@domain/*": [
-                "src/domain/*"
-            ],
-            "@infra/*": [
-                "src/infra/*"
-            ]
-        },
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "noImplicitAny": false,
-        "skipLibCheck": true,
-        "types": [
-            "reflect-metadata",
-            "node",
-            "jest"
-        ]
-    },
-    "include": [
-        ".",
-        "src/**/*.ts",
-        ".eslintrc.js"
+  "compilerOptions": {
+    "target": "ES2017",
+    "module": "commonjs",
+    "lib": [
+      "es2017",
+      "dom"
     ],
-    "exclude": [
-        "node_modules",
-        "tsconfig-paths-bootstrap.js",
-        "dist",
-        "jest.config.ts",
-        "test/**/*"
+    "declaration": false,
+    "removeComments": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
+    "strictPropertyInitialization": false,
+    "sourceMap": false,
+    "outDir": "./dist",
+    "rootDir": "./",
+    "baseUrl": "./src",
+    "paths": {
+      "@entities/*": [
+        "entities/*"
+      ],
+      "@providers/*": [
+        "providers/*"
+      ],
+      "@repositories/*": [
+        "repositories/*"
+      ],
+      "@useCases/*": [
+        "useCases/*"
+      ]
+    },
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "allowJs": true,
+    "noImplicitAny": false,
+    "skipLibCheck": true,
+    "types": [
+      "reflect-metadata",
+      "node",
+      "jest"
     ]
+  },
+  "include": [
+    ".",
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test"
+  ]
 }
