--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "keywords": [],
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.4.0",
         "@types/node": "^18.13.0",
@@ -28,6 +29,7 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "jest": "^29.4.3",
+        "jest-mock-extended": "^3.0.4",
         "prettier": "^2.8.4",
         "prisma": "4.13.0",
         "ts-jest": "^29.0.5",
