chore: adds shared folder on tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
       "@repositories/*": [
         "repositories/*"
       ],
+      "@shared/*": [
+        "shared/*"
+      ],
       "@useCases/*": [
         "useCases/*"
       ]
