--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-    "name": "expressots-real-world-app",
-    "version": "1.0.0",
-    "description": "Conduit App built using ExpressoTS",
-    "author": "Rafael Thayto",
-    "private": true,
-    "license": "UNLICENSED",
-    "scripts": {
-        "prebuild": "rm -rf ./dist",
-        "build": "tsc -p tsconfig.build.json && cp -R ./register-path.js tsconfig.build.json package.json ./dist",
-        "dev": "tsnd -r dotenv/config -r tsconfig-paths/register ./src/main.ts",
-        "prod": "node -r dotenv/config -r ./dist/register-path.js ./dist/src/main.js",
-        "test": "jest",
-        "test:watch": "jest --watchAll",
-        "test:cov": "jest --coverage",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "lint": "eslint \"src/**/*.ts\" --fix"
-    },
-    "keywords": [],
-    "devDependencies": {
-        "@types/bcrypt": "^5.0.0",
-        "@types/express": "^4.17.17",
-        "@types/jest": "^29.4.0",
-        "@types/node": "^18.13.0",
-        "@typescript-eslint/eslint-plugin": "^5.52.0",
-        "@typescript-eslint/parser": "^5.52.0",
-        "eslint": "^8.34.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "jest": "^29.4.3",
-        "jest-mock-extended": "^3.0.4",
-        "prettier": "^2.8.4",
-        "prisma": "4.13.0",
-        "ts-jest": "^29.0.5",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^4.9.5"
-    },
-    "dependencies": {
-        "@expressots/core": "^1.3.0",
-        "@prisma/client": "^4.13.0",
-        "bcrypt": "^5.1.0",
-        "dotenv": "^16.0.3",
-        "inversify": "^6.0.1",
-        "inversify-binding-decorators": "^4.0.0",
-        "inversify-express-utils": "^6.4.3",
-        "reflect-metadata": "^0.1.13",
-        "tsconfig-paths": "^4.2.0"
-    }
+  "name": "expressots-real-world-app",
+  "version": "1.0.0",
+  "description": "Conduit App built using ExpressoTS",
+  "author": "Rafael Thayto",
+  "private": true,
+  "license": "UNLICENSED",
+  "scripts": {
+    "prebuild": "rm -rf ./dist",
+    "build": "tsc -p tsconfig.build.json && cp -R ./register-path.js tsconfig.build.json package.json ./dist",
+    "dev": "tsnd -r dotenv/config -r tsconfig-paths/register ./src/main.ts",
+    "prod": "node -r dotenv/config -r ./dist/register-path.js ./dist/src/main.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"src/**/*.ts\" --fix"
+  },
+  "keywords": [],
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.4.3",
+    "jest-mock-extended": "^3.0.4",
+    "prettier": "^2.8.4",
+    "prisma": "4.13.0",
+    "ts-jest": "^29.0.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@expressots/core": "^1.3.0",
+    "@prisma/client": "^4.13.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "inversify": "^6.0.1",
+    "inversify-binding-decorators": "^4.0.0",
+    "inversify-express-utils": "^6.4.3",
+    "reflect-metadata": "^0.1.13",
+    "tsconfig-paths": "^4.2.0"
+  }
 }
