--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "keywords": [],
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
