--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,9 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.4.0
+
       - uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'pnpm'
+
       - run: npm run lint
+
       - run: npm run test:cov
