--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
   "dependencies": {
     "@expressots/core": "^1.3.0",
     "@prisma/client": "^4.13.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "inversify": "^6.0.1",
     "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.4.3",
+    "jsonwebtoken": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "tsconfig-paths": "^4.2.0"
   }
