--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
     "trailingComma": "all",
     "useTabs": false,
     "endOfLine": "auto",
-    "tabWidth": 2
+    "tabWidth": 2,
+    "bracketSpacing": true
 }
